--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-    "name": "grupo5-ispp",
+    "name": "comfystreamcontact",
     "version": "0.0.0",
     "scripts": {
-        "postinstall": "ng build --aot --prod",
         "ng": "ng",
         "start": "ng serve",
         "build": "ng build",
@@ -13,22 +12,18 @@
     "private": true,
     "dependencies": {
         "@angular/animations": "^11.2.5",
-        "@angular/cli": "~11.2.3",
         "@angular/common": "~11.2.4",
         "@angular/compiler": "~11.2.4",
-        "@angular/compiler-cli": "~11.2.4",
         "@angular/core": "~11.2.4",
         "@angular/forms": "~11.2.4",
         "@angular/platform-browser": "~11.2.4",
         "@angular/platform-browser-dynamic": "~11.2.4",
         "@angular/router": "~11.2.4",
         "bootstrap4": "0.0.1-security",
-        "express": "^4.17.1",
         "ngx-toastr": "^13.2.1",
-        "path": "^0.12.7",
         "rxjs": "~6.6.0",
+        "sweetalert2": "^10.15.5",
         "tslib": "^2.0.0",
-        "typescript": "~4.1.5",
         "zone.js": "~0.11.3"
     },
     "devDependencies": {
@@ -38,7 +33,6 @@
         "@types/jasmine": "~3.6.0",
         "@types/node": "^12.11.1",
         "codelyzer": "^6.0.0",
-        "enhanced-resolve": "^3.3.0",
         "jasmine-core": "~3.6.0",
         "jasmine-spec-reporter": "~5.0.0",
         "karma": "~6.1.0",
@@ -50,9 +44,5 @@
         "ts-node": "~8.3.0",
         "tslint": "~6.1.0",
         "typescript": "~4.1.5"
-    },
-    "engine": {
-        "node": "14.16.0",
-        "npm": "6.14.11"
     }
 }
