--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@angular/platform-browser-dynamic": "~11.2.4",
         "@angular/router": "~11.2.4",
         "bootstrap4": "0.0.1-security",
+        "countdown": "^2.6.0",
         "ngx-toastr": "^13.2.1",
         "rxjs": "~6.6.0",
         "sweetalert2": "^10.15.5",
@@ -30,6 +31,7 @@
         "@angular-devkit/build-angular": "~0.1102.3",
         "@angular/cli": "~11.2.3",
         "@angular/compiler-cli": "~11.2.4",
+        "@types/countdown": "0.0.7",
         "@types/jasmine": "~3.6.0",
         "@types/node": "^12.11.1",
         "codelyzer": "^6.0.0",
